# django-comparison-dashboard

./: .bumpversion.toml  .gitignore  CHANGELOG.md  CITATION.cff  README.md  README.rst  pyproject.toml  runtests.py
django_comparison_dashboard/: CHANGELOG.md  api.py  apps.py  filters.py  forms.py  graphs.py  helpers.py  models.py  preprocessing.py  queries.py  settings.py  urls.py  utils.py  views.py
django_comparison_dashboard/adapters/: __init__.py  core.py
django_comparison_dashboard/data/: dataset.json
django_comparison_dashboard/data/django_comparison_board/: dataset.json
django_comparison_dashboard/datamodel/: color_dict.json  datapackage.json
django_comparison_dashboard/docs/: architecture.md
django_comparison_dashboard/migrations/: 0001_initial.py  0002_filtersettings.py  0003_alter_filtersettings_name.py  0004_delete_timeseriesdata.py  0005_result_remove_scalardata_scenario_delete_scenario_and_more.py  0006_rename_input_energy_vector_scalardata_input_commodity_and_more.py  0007_rename_filtersettings_namedfiltersettings.py  0007_scalardata_input_groups_scalardata_output_groups.py  0008_filtersettings.py  0008_rename_filtersettings_namedfiltersettings.py  0009_filtersettings.py  0009_namedfiltersettings_filter_settings.py  0010_namedfiltersettings_filter_settings.py  0010_remove_namedfiltersettings_filter_set_and_more.py  0011_alter_namedfiltersettings_filter_settings.py  0011_remove_namedfiltersettings_filter_set_and_more.py  0012_alter_namedfiltersettings_filter_settings.py  0013_remove_scalardata_input_commodity_and_more.py
django_comparison_dashboard/sources/: __init__.py  core.py  csv.py  databus.py  modex.py
django_comparison_dashboard/templates/: base.html  button.html  index.html
django_comparison_dashboard/templates/django_comparison_dashboard/: base.html  button.html  chart.html  dashboard.html  index.html  scenario_list.html  upload_data.html
django_comparison_dashboard/templates/django_comparison_dashboard/partials/: error.html  plot.html
tests/: .env  test_adapter.py  test_modex_source.py
tests/_files/: industry_example.csv  oed_scalar.csv  oed_scalar_transformed.csv  sedos_industry_demo.csv
